@@ -55,7 +55,8 @@ const config = { //{{{
     get visualbellWindow() document.getElementById(this.mainWindowID),
     styleableChrome: "chrome://messenger/content/messenger.xul,chrome://messenger/content/messengercompose/messengercompose.xul",
 
-    autocommands: [["FolderLoaded",     "Triggered after switching folders in Thunderbird"],
+    autocommands: [["DOMLoad",          "Triggered when a page's DOM content has fully loaded"],
+                   ["FolderLoaded",     "Triggered after switching folders in Thunderbird"],
                    ["PageLoadPre",      "Triggered after a page load is initiated"],
                    ["PageLoad",         "Triggered when a page gets (re)loaded/opened"],
                    ["MuttatorEnter",    "Triggered after Thunderbird starts"],
